Remove SecretProvider